<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightPrimary"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/divider4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/cardview_vertical_div"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:background="@color/colorLightPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/header_cardview" />

                <View
                    android:id="@+id/cardview_horiz_div"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorLightPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/header_cardview" />

                <LinearLayout
                    android:id="@+id/header_cardview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/coords_label"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="8dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"

                        android:text="@string/coords_label"
                        android:textAlignment="viewStart"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/x_coords"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="8dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:text="@string/coords_x"
                        android:textAlignment="viewStart"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/y_coords"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="8dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:text="@string/coords_y"
                        android:textAlignment="viewStart"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp" />
                </LinearLayout>

                <TableLayout
                    android:id="@+id/tableLayout"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/cardview_vertical_div"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/header_cardview">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/angle_label"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="8dp"
                            android:paddingTop="2dp"
                            android:paddingBottom="2dp"
                            android:text="@string/angle_label"
                            android:textColor="#FFFFFF"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/angle_value"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="8dp"
                            android:paddingTop="2dp"
                            android:paddingBottom="2dp"
                            android:text="@string/angle_value"
                            android:textColor="#FFFFFF"
                            android:textSize="20sp" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/park_no_label"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="8dp"
                            android:paddingTop="2dp"
                            android:paddingBottom="2dp"
                            android:text="@string/park_no_label"
                            android:textColor="#FFFFFF"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/park_no_value"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="8dp"
                            android:paddingTop="2dp"
                            android:paddingBottom="2dp"
                            android:text="@string/park_no_value"
                            android:textColor="#FFFFFF"
                            android:textSize="20sp" />

                    </TableRow>
                </TableLayout>

                <TableLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cardview_vertical_div"
                    app:layout_constraintTop_toBottomOf="@+id/header_cardview">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/speed_label"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="8dp"
                            android:paddingTop="2dp"
                            android:paddingBottom="2dp"
                            android:text="@string/speed"
                            android:textColor="#FFFFFF"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/speed_value"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="8dp"
                            android:paddingTop="2dp"
                            android:paddingBottom="2dp"
                            android:text="@string/speed_value"
                            android:textColor="#FFFFFF"
                            android:textSize="20sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/park_id_label"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="8dp"
                            android:paddingTop="2dp"
                            android:paddingBottom="2dp"
                            android:text="@string/park_id_label"
                            android:textColor="#FFFFFF"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/park_id_value"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="8dp"
                            android:paddingTop="2dp"
                            android:paddingBottom="2dp"
                            android:text="@string/park_id_value"
                            android:textColor="#FFFFFF"
                            android:textSize="20sp" />
                    </TableRow>

                </TableLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/toggle_mode"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="8dp"
            android:enabled="false"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/scouts"
            android:textSize="16sp"
            app:backgroundTint="@color/colorAccent"
            app:icon="@drawable/play"
            app:layout_constraintBottom_toTopOf="@+id/divider2"
            app:layout_constraintEnd_toStartOf="@+id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/parking"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:enabled="false"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/parking_button"
            android:textSize="16sp"
            app:backgroundTint="@color/colorAccent"
            app:icon="@drawable/parking"
            app:layout_constraintBottom_toTopOf="@+id/divider2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/divider"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider3"
            android:layout_width="27dp"
            android:layout_height="8dp"
            android:layout_marginStart="1dp"
            android:background="@color/colorAccent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="70dp"
            android:background="#00FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3" />

        <View
            android:id="@+id/divider4"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="190dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider"
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:background="#00FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/materialCardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>